--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
     }
   ],
   "env": {
-    "NEXT_PUBLIC_API_URL": "https://finguardai-backend.onrender.com"
+    "NEXT_PUBLIC_API_URL": "https://finguardai.onrender.com"
   },
   "github": {
     "enabled": true,
